--- a/tareas/primefact_optimization/primefact_bloque/Makefile
+++ b/tareas/primefact_optimization/primefact_bloque/Makefile
@@ -7,7 +7,7 @@ DEFS=
 FLAGS=$(strip -Wall -Wextra -pthread $(DEFS))
 FLAGC=$(FLAGS) -std=gnu11
 FLAGX=$(FLAGS) -std=gnu++11
-LIBS=
+LIBS= -pthread -lm
 LINTF=-build/header_guard,-build/include_subdir
 LINTC=$(LINTF),-readability/casting
 LINTX=$(LINTF),-build/c++11,-runtime/references
